<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/myloginhead"
            layout="@layout/toolbarhead"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y34" />


        <!--logo-->
        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myloginhead"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_circle"
            android:gravity="center"
            android:text="@string/logo"
            android:textAlignment="center"
            android:textColor="@color/color_text_selected"
            android:layout_marginTop="@dimen/y20"
            android:textSize="@dimen/x12" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginTop="@dimen/y30">

            <EditText
                android:id="@+id/edit_num"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginBottom="@dimen/y10"
                android:background="@drawable/edittext_back"
                android:hint="@string/phone_num"
                android:inputType="phone"
                android:padding="10dp"
                app:layout_constraintBottom_toTopOf="@+id/edit_check"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.8" />

            <EditText
                android:id="@+id/edit_check"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginBottom="@dimen/y20"
                android:background="@drawable/edittext_back"
                android:hint="@string/chek_num"
                android:inputType="number"
                android:padding="10dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_login"
                app:layout_constraintLeft_toLeftOf="@+id/edit_num"
                app:layout_constraintTop_toBottomOf="@+id/edit_num"
                app:layout_constraintWidth_percent="0.5" />

            <TextView
                android:id="@+id/check"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="@dimen/x2"
                android:gravity="center"
                android:paddingRight="@dimen/x8"
                android:text="@string/getcheck"
                android:textAlignment="center"
                android:textColor="@color/color_text_ps"
                android:textSize="@dimen/x12"
                app:layout_constraintBottom_toBottomOf="@+id/edit_check"
                app:layout_constraintRight_toRightOf="@+id/edit_num"
                app:layout_constraintTop_toTopOf="@+id/edit_check" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button"
                android:text="@string/logintxt"
                android:textColor="@color/my_login_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_check"
                app:layout_constraintWidth_percent="0.8"
                android:textSize="@dimen/x14"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>


</LinearLayout>
