<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/banner_type"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tx_all"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/all"
        android:textAlignment="center"
        android:textSize="@dimen/x14" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/spinner_type_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/type"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="@dimen/x14" />

        <CheckBox
            android:id="@+id/spinner_type_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:button="@mipmap/border_bot" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/spinner_loannum_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/money"
            android:textAlignment="center"
            android:textSize="@dimen/x14" />

        <CheckBox
            android:id="@+id/spinner_loannum_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:button="@mipmap/border_bot" />
    </LinearLayout>

</LinearLayout>

